# sapl-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sapl_base/: README.md  pyproject.toml
sapl_base/src/sapl_base/: __init__.py  authorization_subscription_builder.py  authorization_subscription_factory.py  authorization_subscriptions.py  base_authorization_subscription_factory.py  constraint_bundle.py  constraint_engine.py  constraint_handler.py  constraint_handler_bundle.py  constraint_handler_service.py  constraint_types.py  content_filter.py  decorators.py  deduplication.py  enforcement.py  logging_utils.py  pdp_client.py  policy_decision_points.py  policy_enforcement_point.py  sapl_util.py  sse_parser.py  streaming.py  types.py  validation.py
sapl_base/src/sapl_base/constraint_handling/: constraint_handler_bundle.py  constraint_handler_provider.py  constraint_handler_service.py
sapl_base/src/sapl_base/pep/: __init__.py  boundary_signals.py  enforce.py  plan.py  planner.py  provider.py  request_context.py  runtime.py  shim_signals.py  signal.py  subscription_context.py  transaction.py
sapl_base/src/sapl_base/pep/filters/: __init__.py  (+1 more)
sapl_base/src/sapl_base/policy_enforcement_points/: async_generator_policy_enforcement_point.py  async_policy_enforcement_point.py  base_policy_enforcement_point.py  policy_enforcement_point.py  streaming_policy_enforcement_point.py  sync_policy_enforcement_point.py
sapl_base/src/sapl_base/transport/: __init__.py  constants.py  http_pdp_client.py  oauth2.py  pdp_client.py  rsocket_pdp_client.py  tls_config.py
sapl_base/tests/: test_authorization_subscription_builder.py  test_authorizationsubscriptions.py  test_constraint_bundle.py  test_constraint_engine.py  test_constraint_types.py  test_content_filter.py  test_deduplication.py  test_enforcement.py  test_pdp_client.py  test_policy_decision_point.py  test_policy_decision_points.py  test_sse_parser.py  test_streaming.py  test_transaction_rollback.py  test_types.py  test_validation.py
sapl_base/tests/integration/: conftest.py  test_http_auth_it.py  test_http_oauth2_it.py  test_http_pdp_client_it.py  test_https_auth_it.py  test_https_pdp_client_it.py  test_pep_e2e_it.py  test_rsocket_auth_it.py  test_rsocket_pdp_client_it.py  test_rsocket_tls_it.py
sapl_base/tests/pep/: test_boundary_signals.py  test_enforce.py  test_enforce_blocking.py  test_fail_closed_signals.py  test_plan.py  test_planner.py  test_planner_throwing_provider.py  test_provider.py  test_request_context.py  test_signal.py
sapl_base/tests/pep/filters/: test_content_filter.py  test_content_filter_spring_parity.py
sapl_base/tests/pep/streaming/: mealy_test_support.py  test_mealy.py  test_mealy_cell.py  test_mealy_invariant.py  test_pipeline.py  test_rap_error_propagation.py  test_transition_signals.py
sapl_base/tests/transport/: test_http_pdp_client.py  test_http_pdp_resilience.py  test_oauth2.py  test_rsocket_pdp_client_unit.py  test_rsocket_stream_first_decision_timeout.py  test_sapl_proto_codec.py  test_tls_config.py
sapl_django/: README.md  pyproject.toml
sapl_django/src/sapl_django/: __init__.py  apps.py  authz_subscription_factory.py  config.py  consumers.py  decorators.py  django_authorization_subscription_factory.py  django_streaming_policy_enforcement_point.py  middleware.py  orm_providers.py  orm_shim.py  orm_signal.py  subscription.py
sapl_django/src/sapl_django/templatetags/: sapl.py
sapl_django/test/: test_authorization_subscription_factory.py
sapl_django/tests/: settings.py  test_blocking_path.py  test_config.py  test_decorators.py  test_middleware.py  test_orm_query_manipulation_integration.py  test_orm_query_provider.py  test_orm_query_rewriting_integration.py  test_orm_shim_dummy.py  test_subscription.py  test_transaction_integration.py
sapl_fastapi/: README.md  pyproject.toml
sapl_fastapi/src/sapl_fastapi/: __init__.py  config.py  decorators.py  dependencies.py  subscription.py
sapl_fastapi/tests/: test_blocking_path.py  test_config.py  test_decorators.py  test_sql_query_manipulation_integration.py  test_sql_query_rewriting_integration.py  test_subscription.py  test_transaction_integration.py
sapl_fastmcp/: README.md  pyproject.toml
sapl_fastmcp/src/sapl_fastmcp/: __init__.py  auth_check.py  context.py  decorators.py  enforcement.py  middleware.py  subscription.py
sapl_fastmcp/tests/: conftest.py  test_auth_check.py  test_codemode_auth_smoke.py  test_configuration.py  test_decorators.py  test_enforcement.py  test_finalize_integration.py  test_middleware_enforcement.py  test_subscription.py
sapl_flask/: README.md  pyproject.toml
sapl_flask/src/sapl_flask/: __init__.py  decorators.py  extension.py  flask_authorization_subscription_factory.py  subscription.py
sapl_flask/tests/: test_blocking_path.py  test_decorators.py  test_extension.py  test_sql_query_manipulation_integration.py  test_sql_query_rewriting_integration.py  test_subscription.py  test_transaction_integration.py
sapl_pymongo/: README.md  pyproject.toml
sapl_pymongo/src/sapl_pymongo/: __init__.py  handler.py  providers.py  shim.py  signal.py
sapl_pymongo/tests/: test_integration_mongo_async.py  test_integration_mongomock.py  test_query_manipulation_provider.py  test_query_rewriting_provider.py  test_shim_proxy.py  test_shim_wiring.py
sapl_sqlalchemy/: README.md  pyproject.toml
sapl_sqlalchemy/src/sapl_sqlalchemy/: __init__.py  handler.py  providers.py  shim.py  signal.py
sapl_sqlalchemy/tests/: conftest.py  models.py  sql_harness.py  test_shim_async.py  test_shim_sync.py  test_signal.py  test_sql_query_manipulation_provider.py  test_sql_query_rewriting_provider.py
sapl_tornado/: README.md  pyproject.toml
sapl_tornado/src/sapl_tornado/: __init__.py  config.py  decorators.py  dependencies.py  subscription.py  tornado_authorization_subscription_factory.py  tornado_streaming_policy_enforcement_point.py
sapl_tornado/tests/: test_config.py  test_decorators.py  test_sql_query_manipulation_integration.py  test_sql_query_rewriting_integration.py  test_subscription.py  test_transaction_integration.py
(+15 files in other folders)
