[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "SAPL-Base"
version = "0.0.2"
description = "initial upload to register the name for future development"
readme = "README.md"
authors = [{ name = "Dominic Heutelbeck", email = "dominic@heutelbeck.com" }]
license = { file = "LICENSE" }

dependencies = [
    "sseclient-py"

]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio"
]


[tools.setuptools]
packages = ["sapl_base"]

[tools.pytest.ini_options]
testpaths = [
    "tests"
]