[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "SAPL-Base"
version = "0.0.2"
description = "initial upload to register the name for future development"
readme = "README.md"
authors = [{ name = "Dominic Heutelbeck", email = "dominic@heutelbeck.com" }]
license = { file = "LICENSE" }

dependencies = [
    "backoff",
    "aiohttp",
    "requests",
    "pytest",
]

[project.optional-dependencies]
tests = [
    "pytest-asyncio"
]


[tools.setuptools]
packages = ["sapl_base"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]


