[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapl-base"
version = "4.0.0"
description = "SAPL Policy Enforcement Point (PEP) core library for Python"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "SAPL Community", email = "sapl@2checklmao.de"},
]
keywords = ["SAPL", "ABAC", "authorization", "access-control", "policy", "PEP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "coverage[toml]>=7.0",
]

[project.urls]
Homepage = "https://sapl.io/"
Documentation = "https://sapl.io/docs/latest/8_1_PEPImplementationSpecification/"
Repository = "https://github.com/heutelbeck/sapl-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["sapl_base"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
