[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapl-fastapi"
version = "4.0.0"
description = "SAPL Policy Enforcement Point (PEP) integration for FastAPI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "SAPL Community", email = "sapl@2checklmao.de"},
]
keywords = ["SAPL", "ABAC", "authorization", "FastAPI", "access-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "sapl-base>=4.0.0",
    "fastapi>=0.110",
    "starlette>=0.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://sapl.io/"
Repository = "https://github.com/heutelbeck/sapl-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
