[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapl-fastmcp"
version = "4.0.1"
description = "SAPL Policy Enforcement Point (PEP) integration for FastMCP"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "SAPL Community", email = "sapl@2checklmao.de"},
]
keywords = ["SAPL", "ABAC", "authorization", "FastMCP", "MCP", "access-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "sapl-base>=4.0.1",
    "fastmcp>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic-monty>=0.0.1",
]

[project.urls]
Homepage = "https://sapl.io/"
Repository = "https://github.com/heutelbeck/sapl-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
