[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapl-pymongo"
version = "4.1.0"
description = "SAPL MONGO_QUERY signal source and mongo:queryManipulation provider for PyMongo"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "SAPL Community", email = "sapl@2checklmao.de"},
]
keywords = ["SAPL", "ABAC", "authorization", "PyMongo", "MongoDB", "access-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "sapl-base>=4.1.0,<5",
    "pymongo>=4.9,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mongomock>=4.3",
    "testcontainers>=4.0",
    "ruff==0.15.4",
]

[project.urls]
Homepage = "https://sapl.io/"
Repository = "https://github.com/heutelbeck/sapl-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
