[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapl-sqlalchemy"
version = "4.1.0"
description = "SAPL SQL_QUERY signal source and sql:queryManipulation provider for SQLAlchemy"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "SAPL Community", email = "sapl@2checklmao.de"},
]
keywords = ["SAPL", "ABAC", "authorization", "SQLAlchemy", "access-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "sapl-base>=4.1.0,<5",
    "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.19",
    "ruff==0.15.4",
]

[project.urls]
Homepage = "https://sapl.io/"
Repository = "https://github.com/heutelbeck/sapl-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
